--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toTopOf="@+id/sv_location" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/vendorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="48dp"
