--- a/app/src/main/res/layout/home_truck_card.xml
+++ b/app/src/main/res/layout/home_truck_card.xml
@@ -57,6 +57,15 @@
             app:layout_constraintTop_toBottomOf="@+id/companyNameTextView"
             tools:text="8:00am-9:00pm" />
 
+        <TextView
+            android:id="@+id/distanceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location Unavailable"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@+id/hoursTextView"
+            app:layout_constraintTop_toBottomOf="@+id/hoursTextView" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
