edit truck info/menu screen created

--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -55,7 +55,7 @@
             android:id="@+id/addTruckButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Truck" />
+            android:text="Edit Trucks" />
 
         <Button
             android:id="@+id/employeesButton"
