--- a/app/src/main/res/layout/activity_edit_menu_interface.xml
+++ b/app/src/main/res/layout/activity_edit_menu_interface.xml
@@ -6,26 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editItemPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Item Price"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="259dp" />
-
-    <EditText
-        android:id="@+id/editItemDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Item Description"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="356dp" />
-
     <Button
         android:id="@+id/backToEditTrucks"
         android:layout_width="48dp"
@@ -45,12 +25,21 @@
         tools:layout_editor_absoluteY="664dp" />
 
     <EditText
-        android:id="@+id/editItemName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/headerText"
+        android:layout_width="242dp"
+        android:layout_height="48dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Item Name"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="172dp" />
+        android:text="Select a menu item to edit"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="98dp" />
+
+    <Button
+        android:id="@+id/addItemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Item"
+        tools:layout_editor_absoluteX="307dp"
+        tools:layout_editor_absoluteY="8dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
